# language-from-zero

./: .gitignore  README.md  app.py  attention.py  block.py  embeddings.py  inference.py  interface.py  llm.py  main.py  pyproject.toml  tokenizer.py  train.py
src/: config.py  dataset.py  tokenizer.py  utils.py
src/config/: model.py  train.py
src/data/: dataset.py  processor.py
src/model/: attention.py  block.py  embeddings.py  llm.py
src/services/: content_filter.py
src/utils/: checkpoint.py  io.py
test/: test_tokenizer.py
