[project]
name = "language-from-zero"
version = "0.1.0"
description = "A transformer-based language model implemented from scratch in PyTorch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "gradio>=6.5.1",
    "nltk>=3.9.2",
    "numpy<2",
    "torch<2.3",
]

[tool.setuptools.packages.find]
where = ["src"]
